--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			} 
 			v.setAttribute("width", "480");
 			v.setAttribute("height", "360");
-			v.setAttribute("id", "myvideo");
+			v.id='myvideo';
 			v.setAttribute("controls", "controls");
 			document.body.appendChild(v);
 			
