--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			v.setAttribute("height", "360");
 			v.id='myvideo';
 			v.setAttribute("controls", "controls");
-			document.body.appendChild(v);
+//			document.body.appendChild(v);
 			
 //			iframe.src = [ 'https://www.youtube.com/embed/', id, '?rel=0' ].join( '' );
 //			iframe.src = [ 'https://v.qq.com/txp/iframe/player.html?vid=', id ].join( '' );
