--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			} 
 			v.setAttribute("width", "480");
 			v.setAttribute("height", "360");
-			v.id='myvideo';
+			v.setAttribute("id", "myvideo");
 			v.setAttribute("controls", "controls");
 //			document.body.appendChild(v);
 			
@@ -181,15 +181,15 @@
 				createYoutubeVideo('j31583bsoxs', -1000, 0, 0, Math.PI/2);
 //				createYoutubeVideo('m3218u5u41m', -1000, 0, 2000, Math.PI/2);
 
-			var listener = new THREE.AudioListener();
-			camera.add( listener );
-
-			var audioElement = document.getElementById( 'myvideo' );
-
-			var positionalAudio = new THREE.PositionalAudio( listener );
-			positionalAudio.setMediaElementSource( audioElement );
-			positionalAudio.setRefDistance( 1 );
-			positionalAudio.setDirectionalCone( 180, 230, 0.1 );
+//			var listener = new THREE.AudioListener();
+//			camera.add( listener );
+//
+//			var audioElement = document.getElementById( 'myvideo' );
+//
+//			var positionalAudio = new THREE.PositionalAudio( listener );
+//			positionalAudio.setMediaElementSource( audioElement );
+//			positionalAudio.setRefDistance( 1 );
+//			positionalAudio.setDirectionalCone( 180, 230, 0.1 );
 
 				var backPlaneGeometry = new THREE.PlaneGeometry(1920, 1080)
 				
