--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			
 //			iframe.src = [ 'https://www.youtube.com/embed/', id, '?rel=0' ].join( '' );
 //			iframe.src = [ 'https://v.qq.com/txp/iframe/player.html?vid=', id ].join( '' );
-			div.appendChild( v );
+//			div.appendChild( v );
 			
 			var cssobject = new CSS3DObject( div );
 			cssobject.position.set( x, y, z );
