--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 //			iframe.src = [ 'https://v.qq.com/txp/iframe/player.html?vid=', id ].join( '' );
 //			div.appendChild( v );
 			
-			var cssobject = new CSS3DObject( div );
+			var cssobject = new CSS3DObject( v );
 			cssobject.position.set( x, y, z );
 			cssobject.rotation.y = ry;
 //			cssobject.scale.set(0.01, 0.01, 0.01);
