--- a/webaudio_orientation.html
+++ b/webaudio_orientation.html
@@ -9,8 +9,7 @@
 <body>
 
 	<audio loop id="music" preload="auto" style="display: none">
-		<source src="sounds/376737_Skullbeatz___Bad_Cat_Maste.ogg" type="audio/ogg">
-		<source src="sounds/376737_Skullbeatz___Bad_Cat_Maste.mp3" type="audio/mpeg">
+		<source src="output.wav" type="audio/wav">
 	</audio>
 
 	<div id="overlay">
@@ -24,7 +23,8 @@
 
 	<script type="module">
 		import * as THREE from '../build/three.module.js';
-		import { DeviceOrientationControls } from './jsm/controls/DeviceOrientationControls.js';
+//		import { DeviceOrientationControls } from './jsm/controls/DeviceOrientationControls.js';
+		import { FirstPersonControls } from './jsm/controls/FirstPersonControls.js';
 //		import { OrbitControls } from './jsm/controls/OrbitControls.js';
 		import { PositionalAudioHelper } from './jsm/helpers/PositionalAudioHelper.js';
 		import { GLTFLoader } from './jsm/loaders/GLTFLoader.js';
@@ -33,6 +33,7 @@
 		var controls;
 		var startButton = document.getElementById( 'startButton' );
 		startButton.addEventListener( 'click', init );
+		var clock = new THREE.Clock();
 
 		function init() {
 
@@ -43,9 +44,9 @@
 			//
 
 			camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 0.1, 100 );
-			camera.position.set( 3, 2, 3 );
+			camera.position.set( 0, 1, 3 );
 
-			controls = new DeviceOrientationControls( camera );
+//			controls = new DeviceOrientationControls( camera );
 
 			var reflectionCube = new THREE.CubeTextureLoader()
 				.setPath( 'textures/cube/SwedishRoyalCastle/' )
@@ -147,6 +148,12 @@
 			container.appendChild( renderer.domElement );
 
 			//
+				controls = new FirstPersonControls( camera, renderer.domElement );
+
+				controls.movementSpeed = 0;
+				controls.lookSpeed = 0.01;
+				controls.noFly = true;
+				controls.lookVertical = false;
 
 //			var controls = new OrbitControls( camera, renderer.domElement );
 //			controls.target.set( 0, 0.1, 0 );
@@ -174,7 +181,8 @@
 
 			requestAnimationFrame( animate );
 			renderer.render( scene, camera );
-
+			var delta = clock.getDelta();
+			controls.update( delta );
 		}
 
 	</script>
