--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 	<script type="module">
 		import * as THREE from '../build/three.module.js';
-//		import { DeviceOrientationControls } from './jsm/controls/DeviceOrientationControls.js';
-		import { FirstPersonControls } from './jsm/controls/FirstPersonControls.js';
+		import { DeviceOrientationControls } from './jsm/controls/DeviceOrientationControls.js';
+//		import { FirstPersonControls } from './jsm/controls/FirstPersonControls.js';
 //		import { OrbitControls } from './jsm/controls/OrbitControls.js';
 		import { PositionalAudioHelper } from './jsm/helpers/PositionalAudioHelper.js';
 		import { GLTFLoader } from './jsm/loaders/GLTFLoader.js';
@@ -46,7 +46,7 @@
 			camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 0.1, 100 );
 			camera.position.set( 0, 1, 3 );
 
-//			controls = new DeviceOrientationControls( camera );
+			controls = new DeviceOrientationControls( camera );
 
 			var reflectionCube = new THREE.CubeTextureLoader()
 				.setPath( 'textures/cube/SwedishRoyalCastle/' )
@@ -148,12 +148,12 @@
 			container.appendChild( renderer.domElement );
 
 			//
-				controls = new FirstPersonControls( camera, renderer.domElement );
-
-				controls.movementSpeed = 0;
-				controls.lookSpeed = 0.01;
-				controls.noFly = true;
-				controls.lookVertical = false;
+//				controls = new FirstPersonControls( camera, renderer.domElement );
+//
+//				controls.movementSpeed = 0;
+//				controls.lookSpeed = 0.01;
+//				controls.noFly = true;
+//				controls.lookVertical = false;
 
 //			var controls = new OrbitControls( camera, renderer.domElement );
 //			controls.target.set( 0, 0.1, 0 );
@@ -181,7 +181,7 @@
 
 			requestAnimationFrame( animate );
 			renderer.render( scene, camera );
-			var delta = clock.getDelta();
+//			var delta = clock.getDelta();
 			controls.update( delta );
 		}
 
