--- a/index.html
+++ b/index.html
@@ -182,7 +182,8 @@
 			requestAnimationFrame( animate );
 			renderer.render( scene, camera );
 //			var delta = clock.getDelta();
-			controls.update( delta );
+//			controls.update( delta );
+			controls.update( );
 		}
 
 	</script>
