--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
 			//var delta = clock.getDelta();
 			//controls.update( delta );
 			controls.update();
+			controls.updateAlphaOffsetAngle(Math.PI);
 		}
 
 	</script>
